@@ -1,3 +1,11 @@
+2004-07-24  Karl Berry  <karl@gnu.org>
+
+	* info/echo-area.c (ea_possible_completions),
+	* info/session.c (forward_move_node_structure),
+	* info/infokey.c (compile): cast to intptr_t to avoid cast to
+		pointer from integer of different size.
+	From Havard Eidnes <he@netbsd.org>, 14 Jul 2004 20:38:59 +0200.
+
 2004-07-19  Alper Ersoy  <dirt@gtk.org>
 
 	* makeinfo/makeinfo.c (main): with XML, instead of directly calling
@@ -5,6 +13,7 @@
 	variable declarations until output document is started.
 	(convert_from_loaded_file): handle variables provided with -D and -U
 	flags here, just before entering the reader_loop.
+	(Otherwise, -D/-U with --xml cause a segfault.)
 
 2004-07-15  Werner Lemberg  <wl@gnu.org>
 
